--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
+    <link rel="stylesheet" media="screen" href="https://d1z5poly3sl5ye.cloudfront.net/assets/application-743206266078ba27360c8e2ed61f8b7591abeef33b41a97ca9eff66e35254ea9.css">
     <link rel="stylesheet" href="owl-carousel/owl.theme.css">
     <title>React App</title>
 </head>
